--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,41 @@
 *.zip
 *.tar.gz
 *.rar
+!**/gradle/wrapper/gradle-wrapper.jar
+!jarWithManifest.jar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+src_managed
+
+.project
+.settings
+.checkstyle
+
+.gradle/
+build/
+out/
+target/
+
+.gradletasknamecache
+.DS_Store
+
+logs/
+transaction-logs/
+
+# User-specific stuff:
+.idea/*
+.idea
+!.idea/copyright/*
+
+*.iml
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# SonarRunner for SonarQube
+.sonar
